<resources>
    <string name="app_name">Preto</string>

    <string name="select_language_title">LANGUAGE</string>
    <string name="english_btn_text">English</string>
    <string name="spanish_btn_text">Español</string>

    //-------Login Option screen
    <string name="continue_with_facebook">Register using\nfacebook</string>
    <string name="continue_with_email">Register using\nan email</string>


    //------Registration Screen
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="acceptance_text">When creating an account you agree to Preto\'s\nTerms and Conditions and its privacy policies.</string>
    <string name="accept">ACCEPT</string>
    <string name="register">REGISTER</string>
    <string name="already_account">Already have an account? Sign in</string>

    //Login Screen
    <string name="login">SIGN IN</string>

    //PrivacyPolicy
    <string name="privacy_policy_title">PRIVACY POLICY</string>
    <string name="terms_and_conditions_title">TERMS AND CONDITIONS</string>

    //Home Screen

    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="preorder">PRE ORDER</string>
    <string name="snacks">SNACKS</string>
    <string name="other">SUPPLIES</string>
    <string name="near_you">NEAR YOU</string>


    // Setting Screem

    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="ayuda">HELP</string>
    <string name="contact_us">CONTACT US</string>
    <string name="select_language">CHANGE LANGUAGE</string>
    <string name="logout">SIGN OUT</string>

    //Ayuda Screen
    <string name="ayuda_title">HELP</string>
    <string name="video">HOW DOES IT WORK</string>
    <string name="faq">FAQ</string>

    //Contact Us
    <string name="contact_us_title">CONTACT</string>
    <string name="first_name">NAME:</string>
    <string name="phone">PHONE NUMBER:</string>
    <string name="mail">EMAIL:</string>
    <string name="Affair">SUBJECT:</string>
    <string name="message">MESSAGE:</string>
    <string name="send_btn">SEND</string>

    // FAQ
    <string name="faq_title">FAQ</string>

    //Favorite List
    <string name="favorite_list_title">FAVORITES</string>

    //Filter
    <string name="filter_title">ADVANCED FILTERS</string>
    <string name="openNow">Open now</string>
    <string name="average_cost_title">Average cost</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="category">Category</string>
    <string name="breakfast_cat">Breakfast</string>
    <string name="lunch_cat">Lunch</string>
    <string name="dinner_cat">Dinner</string>
    <string name="snacks_cat">Snacks</string>
    <string name="preorder_cat">Pre order</string>
    <string name="supplies_cat">Supplies</string>

    <string name="type_of_food">Type of food</string>
    <!--<string name="meat">Meat</string>-->
    <!--<string name="signature_cuisine">Signature cuisine</string>-->
    <!--<string name="sea_food">Sea food</string>-->
    <!--<string name="healthy">Healthy</string>-->
    <!--<string name="vegetarian">Vegetarian</string>-->
    <!--<string name="hamburguers">Hamburguers</string>-->
    <!--<string name="fusion">Fusion</string>-->
    <!--<string name="typical">Typical</string>-->
    <!--<string name="fast_food">Fast food</string>-->
    <!--<string name="peruvian">Peruvian</string>-->
    <!--<string name="international">International</string>-->
    <!--<string name="mediterranean">Mediterranean</string>-->

    <string name="american">American</string>
    <string name="Arab">Arab</string>
    <string name="Brazilian">Brazilian</string>
    <string name="Meat">Meat</string>
    <string name="Catering">Catering/Events</string>
    <string name="Chinese">Chinese</string>
    <string name="Greek">Greek</string>
    <string name="Hambuerguers">Hambuerguers</string>
    <string name="IceCream">Ice Cream</string>
    <string name="Indian">Indian</string>
    <string name="Supplies">Supplies</string>
    <string name="International">International</string>
    <string name="Italian">Italian</string>
    <string name="Japonese">Japonese</string>
    <string name="Mediterran">Mediterran</string>
    <string name="Confectionery">Confectionery</string>
    <string name="HealthyFood">Healthy Food</string>
    <string name="Sandwich">Sandwich</string>
    <string name="Sushi">Sushi</string>
    <string name="Crepes">Crepes</string>
    <string name="Cuban">Cuban</string>
    <string name="SignatureCuisine">Signature Cuisine</string>
    <string name="Spanish">Spanish</string>
    <string name="French">French</string>
    <string name="FusionCuisine">Fusion Cuisine</string>
    <string name="Mexican">Mexican</string>
    <string name="Oriental">Oriental</string>
    <string name="Others">Others</string>
    <string name="Bakery">Bakery</string>
    <string name="Grill">Grill</string>
    <string name="Peruvian">Peruvian</string>
    <string name="SeaFood">Sea Food</string>
    <string name="Pizza">Pizza</string>
    <string name="FastFood">Fast Food</string>
    <string name="Thai">Thai</string>
    <string name="Typical">Typical</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Vietnamese">Vietnamese</string>


    <string name="arrange_by_number_of_likes">Arrange by number of likes</string>
    <string name="delivery">Delivery</string>
    <string name="togo">To go</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="debit_card">Debit card</string>
    <string name="credit_card">Credit card</string>
    <string name="sodexo">Sodexo</string>
    <string name="big_pass">Big pass</string>

    <string name="ok"> Ok</string>

    <string name="Average_cost">Average cost:</string>

    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="no_fixed_hour">No fixed\nhours</string>


    //Detail Screen
    <string name="information">INFORMATION</string>
    <string name="menu">MENU</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="type_of_food_detail">Type of food:</string>
    <string name="category_detail">Category:</string>
    <string name="Opens_on_detail">Opens on:</string>
    <string name="average_cost_detail">Average cost:</string>
    <string name="desription_detail">Description</string>
    <string name="history_detail">History</string>
    <string name="payment_method_detail">Payments methods</string>
    <string name="others_detail">Others</string>
    <string name="website_detail">Website</string>
    <string name="menu_detail">Menu</string>

    <string name="delivery_detail">Delivery</string>
    <string name="commnets_detail">Comments</string>
    <string name="call_detail">Call</string>
    <string name="registered_since">Registered since:</string>

    <string name="mark_favourite_successfully">Restaurant mark favourite successfully</string>
    <string name="mark_unfavourite_successfully">Restaurant mark unfavourite successfully</string>

    <string name="facebook_app_id">131671104253341</string>
    <string name="title_activity_map_for_distance">Map</string>

    <string name="list">LIST</string>
    <string name="map">MAP</string>
    <string name="cancel">Cancel</string>
    <string name="to_open_with">To open with</string>
    <string name="waze">WAZE</string>
    <string name="google_maps">GOOGLE MAPS</string>
    <string name="title_activity_maps">Map</string>

    <string name="logout_popup">Are you sure you want to logout?</string>

    <string name="jungle_box_link">http://www.junglebox.com.co/</string>
    <string name="we_recommend">We recommend</string>
    <string name="recommend_text">We recommend that you call to confirm the availability of the offered products.</string>

    <string name="location_place_holder_text">Enter your location</string>

    <string name="contact_us_popup">Email send successfully! Admin will contact you soon.</string>

    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>
