<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_language_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/language_bg"
    tools:context="com.elisa.pretoapp.LanguageSelectActivity">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/navigation_bar_color"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_language_title"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_portrait" />

    <Button
        android:id="@+id/spanishLanguageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/language_btn"
        android:text="@string/spanish_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/englishLanguageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logoView"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/language_btn"
        android:text="@string/english_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>
