<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_language_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen_bg"
    tools:context="com.elisa.pretoapp.LanguageSelectActivity">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/navigation_bar_color">

        <CustomControl.LatoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/contact_us_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/backButtonClick"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_button" />

        <ImageButton
            android:id="@+id/homeButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/home_btn" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_portrait" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_rounded_corner_light_blue"
                android:orientation="vertical"
                android:padding="15dp">

                <CustomControl.LatoBoldEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue" />

                <CustomControl.LatoBoldEditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue" />

                <CustomControl.LatoBoldEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:gravity="center_vertical"
                    android:hint="@string/mail"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue" />

                <CustomControl.LatoBoldEditText
                    android:id="@+id/subjectEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:gravity="center_vertical"
                    android:hint="@string/Affair"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue" />

                <CustomControl.LatoBoldEditText
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_rounded_corner"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:padding="10dp"
                    android:textColor="@color/color_blue"
                    android:textColorHint="@color/color_blue" />

                <CustomControl.LatoBoldButton
                    android:id="@+id/sendBtnClick"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_round_blue"
                    android:text="@string/send_btn"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="false" />
</RelativeLayout>
