<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_language_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/language_bg"
    tools:context="com.elisa.pretoapp.LanguageSelectActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_portrait" />

        <CustomControl.LatoHeavyEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rounded_corner"
            android:gravity="center"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColor="@color/color_blue"
            android:textColorHint="@color/color_blue" />

        <CustomControl.LatoHeavyEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rounded_corner"
            android:gravity="center"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="gone"
            android:hint="@string/password"
            android:textColor="@color/color_blue"
            android:textColorHint="@color/color_blue" />

        <CustomControl.MyriadProBoldButton
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_rounded_corner"
            android:text="@string/login" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="false" />

</RelativeLayout>
